# fdtdx

./: pyproject.toml  ruff.toml
tests/objects/boundaries/: conftest.py  test_boundary.py  test_perfectly_matched_layer.py  test_periodic.py
