[project]
name = "fdtdx"
version = "0.4.3"
description = "A JAX framework for the finite-difference time-domain (FDTD) method for solving Maxwell's equations with a focus on inverse design of photonic devices." 
readme = "README.md"
authors = [
    { name = "Yannik Mahlau", email = "mahlau@tnt.uni-hannover.de" },
    { name = "Frederik Schubert", email = "schubert@tnt.uni-hannover.de" },
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pytreeclass>=0.11",
    "jax>=0.4.36",
    "moviepy>=2.1.1",
    "optax>=0.2.4",
    "equinox>=0.11.10",
    "trimesh>=4.5.3",
    "tidy3d>=2.8.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "rich>=13.9.4",
]

[project.urls]
Repository = "https://github.com/ymahlau/fdtdx"
Documentation = "https://ymahlau.github.io/fdtdx/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "examples", "checks", "test"]
exclude = ["**/.venv"]

[dependency-groups]
cuda12 = [
    "jax[cuda12]>=0.5.0",
]
dev = [
    "ipykernel>=6.30.0",
    "tox-uv>=1.26.2",
    {include-group = "doc"},
    {include-group = "lint"},
    {include-group = "qa"},
    {include-group = "test"},
]
dev-cuda = [
    {include-group = "cuda12"},
    {include-group = "dev"},
]
dev-rocm = [
    {include-group = "rocm"},
    {include-group = "dev"},
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.16",
]
lint = [
    "pydoclint>=0.6.6",
    "ruff>=0.12.4",
]
qa = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
]
rocm = [
    "jax[rocm]>=0.5.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
